--- a/index.html
+++ b/index.html
@@ -1,59 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Document</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <ul class="list">
-        <li class="list-item">
-            <a href="#" class="link">Скидки</a>
-        </li><!--
-     --><li class="list-item">
-            <a href="#" class="link">Новинки</a>
-        </li><!--
-     --><li class="list-item">
-            <a href="#" class="link">Одежда</a>
-            <ul class="sub-list">
-                <li class="sub-item">
-                    <a href="#" class="sub-link">Верхняя одежда</a>
-                </li>
-                <li class="sub-item relative">
-                    <a href="#" class="sub-link">Штаны</a>
-                    <ul class="sub-sub-list">
-                        <li class="sub-sub-item">
-                            <a href="#" class="sub-sub-link">Джинсы</a>
-                        </li>
-                        <li class="sub-sub-item">
-                            <a href="#" class="sub-sub-link">Спортиные штаны</a>
-                        </li>
-                        <li class="sub-sub-item">
-                            <a href="#" class="sub-sub-link">Джоггеры</a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="sub-item">
-                    <a href="#" class="sub-link">Классические костюмы</a>
-                </li>
-                <li class="sub-item">
-                    <a href="#" class="sub-link">Спортивные костюмы</a>
-                </li>
-            </ul>
-        </li><!--
-     --><li class="list-item">
-            <a href="#" class="link">Обувь</a>
-        </li><!--
-     --><li class="list-item">
-            <a href="#" class="link">Аксессуары</a>
-        </li><!--
-     --><li class="list-item">
-            <a href="#" class="link">Контакты</a>
-        </li>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam nobis non porro voluptate officiis praesentium velit 
-        repellendus illum eos voluptatibus nihil dolorum, ea ab, voluptas, harum quos. Earum iste vero natus rem neque a doloribus. 
-        Molestias est dolor rem, impedit aut unde perspiciatis repellat sint deserunt sapiente nam libero in.
-    </p>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Document</title>
+        <link rel="stylesheet" href="reset.css" />
+        <link rel="stylesheet" href="style.css" />
+    </head>
+    <body>
+        <ul class="list">
+            <li class="list-item">
+                <a href="#" class="link">Скидки</a>
+            </li><!--
+         --><li class="list-item">
+                <a href="#" class="link">Новинки</a>
+            </li><!--
+         --><li class="list-item">
+                <a href="#" class="link">Одежда</a>
+                <ul class="sub-list">
+                    <li class="sub-item">
+                        <a href="#" class="sub-link">Верхняя одежда</a>
+                    </li>
+                    <li class="sub-item relative">
+                        <a href="#" class="sub-link">Штаны</a>
+                        <ul class="sub-sub-list">
+                            <li class="sub-sub-item">
+                                <a href="#" class="sub-sub-link">Джинсы</a>
+                            </li>
+                            <li class="sub-sub-item">
+                                <a href="#" class="sub-sub-link">Спортиные штаны</a>
+                            </li>
+                            <li class="sub-sub-item">
+                                <a href="#" class="sub-sub-link">Джоггеры</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="sub-item">
+                        <a href="#" class="sub-link">Классические костюмы</a>
+                    </li>
+                    <li class="sub-item">
+                        <a href="#" class="sub-link">Спортивные костюмы</a>
+                    </li>
+                </ul>
+            </li><!--
+         --><li class="list-item">
+                <a href="#" class="link">Обувь</a>
+            </li><!--
+         --><li class="list-item">
+                <a href="#" class="link">Аксессуары</a>
+            </li><!--
+         --><li class="list-item">
+                <a href="#" class="link">Контакты</a>
+            </li>
+        </ul>
+        <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam nobis non porro voluptate officiis
+            praesentium velit repellendus illum eos voluptatibus nihil dolorum, ea ab, voluptas, harum quos. Earum iste
+            vero natus rem neque a doloribus. Molestias est dolor rem, impedit aut unde perspiciatis repellat sint
+            deserunt sapiente nam libero in.
+        </p>
+    </body>
 </html>
